# agente-waichatt

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: agent.py  celery_app.py  chat_memory.py  chatwoot.py  classifier.py  config.py  db.py  main.py  media.py  media_catalog.py  models.py  notifier.py  observability.py  prompt_manager.py  service.py  ycloud.py
app/prompts/: waichatt.md
app/tasks/: agent_tasks.py
postgres/: reset_dev.sql
postgres/migrations/: 001_chat_memory.sql
scripts/: evals.py  reset_dev.sh  seed_langfuse.py
